2004-03-12  Johan Dahlin  <johan@gnome.org>

	* gst/gstcaps.h (GST_CAPS_IS_SIMPLE): Capitalize macro
	* gst/gstcaps.h: Clean up

	* gst/gst.c (init_post): call gst_caps_get_type() instead of
	_gst_caps_initalize()

	* gst/gstcaps.c: Style fixes, stay closer to glib and friends
	(_gst_caps_initialize): Remove, in favor for gst_caps_get_type()

	* gst/gststructure.c (gst_structure_get_type): Ditto

	* gst/gststructure.h: Ditto
	
2004-03-11  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* gst/gstqueue.c: (gst_queue_init):
	  Reset default max. values in queues. Reason is simply to avoid
	  braindead use. If you want wider values, use the properties. The
	  default is supposed to always work. Wider values would make this
	  beast a memory hog by default (250 full-PAL RGB32 video frames?
	  That's 440 MB! No thank you).

2004-03-10  David Schleef  <ds@schleef.org>

	* tools/gst-run.c: (main):  Fix crash when no relevant tools
	were found.  (bug #136793)

2004-03-10  Johan Dahlin  <johan@gnome.org>

	* gst/schedulers/gstoptimalscheduler.c
	(gst_opt_scheduler_pad_unlink): Implement unlink for elements with
	links to elements within the same group, so we can finally remove
	that annoying warning. Refactor the code a little bit
	(group_dec_links_for_element): Split out

2004-03-09  David Schleef  <ds@schleef.org>

	* docs/manual/dparams-app.xml:  Fix to handle double dparams.
	(bug #134863)

2004-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: first bug fix due to major/minor bump

2004-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: bump nano to 1

=== release 0.7.6 ===

2004-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	* RELEASE:
	* configure.ac:
          releasing 0.7.6, "Almost"
	* po/fr.po:
	* po/nl.po:
	* tools/Makefile.am:
	* tools/gst-feedback-m.m:
          unversioned source

2004-03-09  Johan Dahlin  <johan@gnome.org>

	Reviewed by: Thomas Vander Stichele
