@@ -374,7 +374,7 @@ gst_debug_print_object (gpointer ptr)
     return gst_structure_to_string ((GstStructure *)ptr);
   }
 #ifdef USE_POISONING
-  if (*(int *)ptr == 0xffffffff) {
+  if (*(guint32 *)ptr == 0xffffffff) {
     return g_strdup_printf ("<poisoned@%p>", ptr);
   }
 #endif
